--- a/200.html
+++ b/200.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html >
 <head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="modulepreload" as="script" crossorigin href="/_nuxt/entry.f78f9553.js"><link rel="preload" as="style" href="/_nuxt/entry.eb957131.css"><link rel="prefetch" as="script" crossorigin href="/_nuxt/error-component.ec8ebc24.js"><link rel="stylesheet" href="/_nuxt/entry.eb957131.css"></head>
-<body ><div id="__nuxt"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"_errors":1,"serverRendered":2,"data":3,"state":4},{},false,{},{}]</script><script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script><script type="module" src="/_nuxt/entry.f78f9553.js" crossorigin></script></body>
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="modulepreload" as="script" crossorigin href="/_nuxt/entry.f824b0f4.js"><link rel="preload" as="style" href="/_nuxt/entry.8165b3f0.css"><link rel="prefetch" as="image" type="image/png" href="/_nuxt/logo.1f9ee824.png"><link rel="prefetch" as="script" crossorigin href="/_nuxt/error-component.24d145ba.js"><link rel="stylesheet" href="/_nuxt/entry.8165b3f0.css"></head>
+<body ><div id="__nuxt"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"_errors":1,"serverRendered":2,"data":3,"state":4},{},false,{},{}]</script><script>window.__NUXT__={};window.__NUXT__.config={public:{i18n:{experimental:{jsTsFormatResource:false},baseUrl:""}},app:{baseURL:"/",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script><script type="module" src="/_nuxt/entry.f824b0f4.js" crossorigin></script></body>
 </html>
